--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,5 +6,7 @@
 @import "bloks/promo";
 @import "bloks/header";  
 @import "bloks/buttons";
+@import "bloks/advantages";
+@import "bloks/title";
 @import "general";
 
