add section consultation

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,5 +8,7 @@
 @import "bloks/buttons";
 @import "bloks/advantages";
 @import "bloks/title";
+@import "bloks/consultation";
+@import "bloks/forms";
 @import "general";
 
