--- a/src/scss/bloks/_title.scss
+++ b/src/scss/bloks/_title.scss
@@ -3,4 +3,11 @@
     font-size: 30px;
     text-align: center;
     color: $sub-color;
+    text-transform: uppercase;
+    &_left {
+        color: #fff;
+        font-size: 36px; 
+        text-align: left;
+        line-height: 54px;
+    }
 }
