--- a/src/scss/bloks/_catalog.scss
+++ b/src/scss/bloks/_catalog.scss
@@ -34,6 +34,9 @@
         }
     }
     &__content {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
         margin-top: 60px;
     }
     &-item {
@@ -42,6 +45,8 @@
         border: 2px solid #e8e8e8;
         background-color: #fff;
         padding: 20px 20px 26px 20px;
+        overflow: hidden;
+        margin-bottom: 20px;
         &__img {
             display: block;
             margin: 0 auto;
@@ -96,6 +101,49 @@
             font-size: 20px;
             font-weight: 700;
             color: #050505;
+        }
+        &__wrapper {
+            display: flex;
+            width: calc(200% + 40px);
+        }
+        &__content {
+            width: 50%;
+            margin-right: 0px;
+            transform: translateX(-100%);
+            &_active {
+                transform: translateX(0%);
+                margin-right: 20px;
+            }
+        }
+        &__list {
+            position: relative;
+            width: 50%;
+            margin-left: 20px;
+            transform: translateX(-0%);
+            padding-right: 20px;
+            padding-left: 19px;
+            transition: 0.5s all;
+            &_active {
+                transform: translateX(-100%);
+                margin-left: 0px;
+            }
+            li {
+                position: relative;
+                color: #555555;
+                font-size: 14px;
+                font-weight: 300;
+                margin-bottom: 20px;
+                line-height: 21px;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 5px;
+                    height: 5px;
+                    background-color: $main-color;
+                    left: -14px;
+                    top: 8px;
+                }
+            }
         }
     }
 }
