--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 //@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;300;400;500;700&display=swap');
 @import "base/nullstyle";
 @import "base/variables";
+@import "base/animations";
 @import "base/mixin";
 @import "media/media";
 @import "bloks/promo";
